<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.recipient.RecipientListActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_bank_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title_1"
            android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
            android:textColor="@color/dark_grey"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:text="@string/recipient_bank_title"
            android:textSize="14sp"
            android:layout_marginStart="16dp"
            android:layout_weight="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_2"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Regular"
        android:textSize="14sp"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/ll_bank_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/detail_desc"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title_2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:background="@color/light_grey_bg">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dark_grey"
                    android:text="@string/amount_input_header"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/ll_header"
                android:padding="16dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_input_amount"
                    android:padding="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:text="@string/amount_input_amount"
                        android:textColor="@color/dark_grey"
                        android:layout_gravity="center"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_amount"
                        android:layout_width="wrap_content"
                        style="@style/MyEditTextStyle"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textSize="18sp"
                        android:textColor="#5A5959"
                        android:layout_gravity="center"
                        tools:text="@string/detail_amount_dummy"
                        android:inputType="numberDecimal"
                        android:textAlignment="center"
                        android:layout_marginTop="2dp"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:layout_marginTop="8dp"
                        android:textSize="14sp"
                        android:text="@string/amount_current_balance"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_current_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textColor="@color/dark_grey"
                        android:layout_marginTop="8dp"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/amount_current_balance_dummy"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/divider_1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_divider" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="8dp"
                    android:textSize="14sp"
                    android:text="@string/detail_transfer_from"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        android:text="@string/detail_sender_name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_sender_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/detail_sender_acc"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="12dp"
                    android:textSize="14sp"
                    android:text="@string/detail_transfer_to"/>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_recipient_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        android:text="@string/detail_recipient_name"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_recipient_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/detail_recipient_acc"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <View
                    android:id="@+id/divider_2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginHorizontal="2dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/bg_divider" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        android:text="@string/detail_transfer_amount"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_transfer_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/detail_amount_dummy"/>

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        android:text="@string/detail_admin_fee"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_admin_fee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                        android:textColor="@color/dark_grey"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/detail_admin_fee_input"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textColor="@color/dark_grey"
                        android:textSize="14sp"
                        android:text="@string/detail_total"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_total"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                        android:textColor="@color/dark_grey"
                        android:layout_weight="0.5"
                        android:textAlignment="textEnd"
                        android:textSize="14sp"
                        android:text="@string/detail_amount_dummy"/>

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
        android:padding="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="32dp"
        android:textSize="14sp"
        android:text="@string/btn_back"
        android:background="@drawable/bg_button_back"
        android:textColor="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
        android:padding="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/btn_confirm"
        android:textSize="14sp"
        android:background="@drawable/bg_button_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>