<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="@drawable/bg_widget"
    tools:context=".ui.recipient.RecipientListActivity">

    <LinearLayout
        android:id="@+id/ll_bank_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="8dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/tv_title_1"
            android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
            android:textColor="@color/dark_grey"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            android:text="@string/recipient_bank_title"
            android:textSize="12sp"
            android:layout_marginStart="16dp"
            android:layout_weight="0.8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title_2"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Regular"
        android:textSize="12sp"
        android:lineSpacingExtra="4dp"
        android:textColor="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@+id/ll_bank_title"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingEnd="16dp"
        android:text="@string/widget_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/cv_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_widget_card">

            <LinearLayout
                android:id="@+id/ll_header"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="1dp"
                android:background="@drawable/bg_balance_title">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                    android:textSize="14sp"
                    android:layout_marginStart="16dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/dark_grey"
                    android:text="@string/widget_check_balance"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginHorizontal="8dp"
                android:background="@drawable/bg_input_amount"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
                    android:text="@string/widget_current_balance_title"
                    android:textColor="@color/dark_grey"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tv_balance"
                    android:layout_width="match_parent"
                    style="@style/MyEditTextStyle"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                    android:textSize="14sp"
                    android:textColor="#1C1C1C"
                    android:layout_gravity="center"
                    android:text="@string/widget_current_balance"
                    android:inputType="number"
                    android:textAlignment="center"
                    android:layout_marginTop="12dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/widget_selected_accounte"
                android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
                android:textColor="@color/dark_grey"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginHorizontal="8dp"
                android:layout_marginBottom="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/widget_user_name"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                    android:textColor="@color/dark_grey"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_user_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Bold"
                    android:textColor="@color/dark_grey"
                    android:layout_marginTop="2dp"
                    android:layout_weight="0.5"
                    android:textAlignment="textEnd"
                    android:textSize="12sp"
                    android:text="@string/widget_user_account"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>