<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_success"
        android:layout_width="130dp"
        android:layout_height="130dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.37"
        android:src="@drawable/ic_success"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_success_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.SemiBold"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/transaction_success_title"
        app:layout_constraintTop_toBottomOf="@id/iv_success"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_success_desc"
        android:textAlignment="center"
        android:lineSpacingExtra="6dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Regular"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/tv_success_title"
        android:text="@string/transaction_success_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_back_to_app"
        android:textAppearance="@style/TextAppearance.Text.PlusJakartaSans.Medium"
        android:text="@string/transaction_success_back_to_app"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>